--- a/Views/Pages/NetworkMigrationPage.xaml
+++ b/Views/Pages/NetworkMigrationPage.xaml
@@ -17,7 +17,12 @@
         <helpers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
     </Page.Resources>
 
-    <Grid Margin="42">
+    <ScrollViewer VerticalScrollBarVisibility="Auto" 
+                  HorizontalScrollBarVisibility="Disabled"
+                  PanningMode="VerticalOnly"
+                  CanContentScroll="True"
+                  helpers:ScrollBehavior.FixMouseWheel="True">
+        <Grid Margin="42">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -75,4 +80,5 @@
             </ui:CardControl>
         </Grid>
     </Grid>
+    </ScrollViewer>
 </Page>
