--- a/Views/Pages/VCenterMigrationPage.xaml
+++ b/Views/Pages/VCenterMigrationPage.xaml
@@ -14,7 +14,11 @@
         <helpers:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
         <helpers:BoolToParameterConverter x:Key="BoolToParameterConverter" />
     </Page.Resources>
-    <Grid Margin="42">
+    <ScrollViewer VerticalScrollBarVisibility="Auto" 
+                  HorizontalScrollBarVisibility="Disabled"
+                  PanningMode="VerticalOnly"
+                  CanContentScroll="True">
+        <Grid Margin="42">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -81,4 +85,5 @@
         </StackPanel>
         <ui:TextBox Grid.Row="3" Text="{Binding CurrentTaskDetails}" IsReadOnly="True" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" FontFamily="Consolas"/>
     </Grid>
+        </ScrollViewer>
 </Page>
